AAE-22809 first implementation of exact search for string variable